# perl-Amazon-SQS-Client

./: .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  INSTALL.md  Makefile.am  Makefile.in  NEWS  README  README.md  TESTING  TESTING.md  aclocal.m4  configure  configure.ac  perl-Amazon-SQS-Client.spec.in  required-modules
.github/workflows/: build.yml
autotools/: ads_PERL_INCLUDES.m4  ads_PERL_MODULE.m4  ads_PROG_PERL.m4  ax_dist_check_hack.m4
cpan/: Makefile.am  buildspec.yml  extra-files  provides  requires  resources  test-requires
examples/: AddPermissionSample.pl  CreateQueueSample.pl  DeleteMessageSample.pl  DeleteQueueSample.pl  GetQueueAttributesSample.pl
resources/: Makefile.am  Makefile.in  ReadMe.html  aws-sqs.ini
src/: Makefile.in
src/main/: Makefile.am  Makefile.in
src/main/bash/: Makefile.in
src/main/perl/: MANIFEST  Makefile.PL  Makefile.am  Makefile.in
src/main/perl/lib/: Makefile.am  Makefile.in
src/main/perl/lib/Amazon/SQS/: Client.pm.in  Config.pm.in  Exception.pm.in  Model.pm.in  QueueHandler.pm.in
src/main/perl/lib/Amazon/SQS/Model/: ChangeMessageVisibilityBatchResponse.pm.in  ChangeMessageVisibilityRequest.pm.in  ChangeMessageVisibilityResponse.pm.in  Message.pm.in  ReceiveMessageRequest.pm.in  ReceiveMessageResponse.pm.in  SendMessageRequest.pm.in  SendMessageResponse.pm.in
src/main/perl/lib/t/: 01-handler.t
src/main/perl/t/: test-01.t
